--- a/config/jei/world/local/______1/bookmarks.ini
+++ b/config/jei/world/local/______1/bookmarks.ini
@@ -1,3 +1,11 @@
-T:{Count:1b,id:"hexerei:mixing_cauldron"}
 T:{Count:1b,id:"hexerei:pestle_and_mortar"}
 T:{Count:1b,id:"eidolon:crucible"}
+T:{Count:1b,id:"embers:caminite_blend"}
+T:{Count:1b,id:"eidolon:lead_ingot"}
+T:{Count:1b,id:"minecraft:clay_ball"}
+T:{Count:1b,id:"minecraft:sand"}
+T:{Count:1b,id:"hexerei:mixing_cauldron"}
+T:{Count:1b,id:"embers:raw_caminite_block"}
+T:{Count:1b,id:"embers:caminite_brick"}
+T:{Count:1b,id:"embers:raw_caminite_plate"}
+T:{Count:1b,id:"minecraft:redstone"}
