删除熔炉和前期线路设计

--- a/config/jei/world/local/______1/bookmarks.ini
+++ b/config/jei/world/local/______1/bookmarks.ini
@@ -9,3 +9,12 @@ T:{Count:1b,id:"embers:raw_caminite_block"}
 T:{Count:1b,id:"embers:caminite_brick"}
 T:{Count:1b,id:"embers:raw_caminite_plate"}
 T:{Count:1b,id:"minecraft:redstone"}
+T:{Count:1b,id:"spelunkery:cinnabar"}
+T:{Count:1b,id:"spelunkery:nephrite"}
+T:{Count:1b,id:"create:andesite_alloy"}
+T:{Count:1b,id:"minecraft:prismarine_crystals"}
+T:{Count:1b,id:"minecraft:kelp"}
+T:{Count:1b,id:"spelunkery:salt"}
+T:{Count:1b,id:"naturesaura:gold_fiber"}
+T:{Count:1b,id:"naturesaura:gold_leaf"}
+T:{Count:1b,id:"minecraft:conduit"}
