配方修改and数据包初试

--- a/config/jei/world/local/______1/bookmarks.ini
+++ b/config/jei/world/local/______1/bookmarks.ini
@@ -1,4 +1,3 @@
-T:{Count:1b,id:"hexerei:pestle_and_mortar"}
 T:{Count:1b,id:"eidolon:crucible"}
 T:{Count:1b,id:"embers:caminite_blend"}
 T:{Count:1b,id:"eidolon:lead_ingot"}
@@ -18,3 +17,12 @@ T:{Count:1b,id:"spelunkery:salt"}
 T:{Count:1b,id:"naturesaura:gold_fiber"}
 T:{Count:1b,id:"naturesaura:gold_leaf"}
 T:{Count:1b,id:"minecraft:conduit"}
+T:{Count:1b,id:"autumnity:yellow_maple_leaves"}
+T:{Count:1b,id:"minecraft:gold_nugget"}
+T:{Count:1b,id:"minecraft:blast_furnace"}
+T:{Count:1b,id:"minecraft:smooth_stone"}
+T:{Count:1b,id:"minecraft:iron_ingot"}
+T:{Count:1b,id:"minecraft:furnace"}
+T:{Count:1b,id:"quark:blackstone_furnace"}
+T:{Count:1b,id:"botania:apothecary_default"}
+T:{Count:1b,id:"hexerei:pestle_and_mortar"}
