--- a/config/jei/world/local/______1/bookmarks.ini
+++ b/config/jei/world/local/______1/bookmarks.ini
@@ -26,3 +26,4 @@ T:{Count:1b,id:"minecraft:furnace"}
 T:{Count:1b,id:"quark:blackstone_furnace"}
 T:{Count:1b,id:"botania:apothecary_default"}
 T:{Count:1b,id:"hexerei:pestle_and_mortar"}
+T:{Count:1b,id:"minecraft:stone"}
